--- a/_config.aurora.yml
+++ b/_config.aurora.yml
@@ -65,7 +65,9 @@ theme:
 #! @docs https://aurora.tridiamond.tech/guide/social.html
 #! ---------------------------------------------------------------
 socials:
+  github: 'https://github.com/stephentse9527'
   customs:
+
   ##! Example:
   ##! --- Using SVG
   # bilibili:
@@ -99,11 +101,11 @@ site_meta:
 gitalk:
   enable: true
   autoExpand: true
-  clientID: ''
-  clientSecret: ''
-  repo: 'dev-blog-comments'
-  owner: 'TriDiamond'
-  admin: ['TriDiamond']
+  clientID: '22348af3f9b397bb7c5d'
+  clientSecret: 'c7a3e917f13cd33f652793a0593fb8cb8d4c596e'
+  repo: 'stephentse9527.github.io'
+  owner: '76936033'
+  admin: ['76936033']
   id: uid
   language: en
   distractionFreeMode: true
@@ -121,7 +123,7 @@ valine:
   visitor: true
   lang: en
   meta: ['nick', 'mail']
-  admin: 'TriDiamond'
+  admin: 'Stephen Tse'
   recentComment: true
 
 # Enable Busuanzi statistic plugin
@@ -130,7 +132,7 @@ busuanzi:
   enable: true
 
 copy_protection:
-  enable: true
+  enable: false
   author:
     cn: 作者
     en: Author
