--- a/.github/workflows/he.yml
+++ b/.github/workflows/he.yml
@@ -11,6 +11,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
 
+      - name: Setup Hexo Image
+        run: |
+          npm install https://github.com/CodeFalling/hexo-asset-image --save
+
       - name: Build and Deploy
         uses: theme-keep/hexo-deploy-github-pages-action@master # 使用专门部署 Hexo 到 GitHub pages 的 action
         env:
