修复图片不显示问题3

--- a/.github/workflows/he.yml
+++ b/.github/workflows/he.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Setup Hexo Image
         run: |
-          npm install https://github.com/xcodebuild/hexo-asset-image --save
+          npm install hexo-asset-img --save
 
       - name: Build and Deploy
         uses: theme-keep/hexo-deploy-github-pages-action@master # 使用专门部署 Hexo 到 GitHub pages 的 action
