--- a/.github/workflows/he.yml
+++ b/.github/workflows/he.yml
@@ -10,10 +10,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
-
-      - name: Setup Hexo Image
-        run: |
-          npm install hexo-asset-img --save
+#
+#      - name: Setup Hexo Image
+#        run: |
+#          npm install hexo-asset-img --save
 
       - name: Build and Deploy
         uses: theme-keep/hexo-deploy-github-pages-action@master # 使用专门部署 Hexo 到 GitHub pages 的 action
